# monoid-actions

./: .gitignore  CHANGELOG.md  LICENSE  README.md  monoid-actions.cabal  stack.yaml
src/Data/Monoid/: Action.hs
